Mit Colab erstellt

--- a/Information_Retrieval_Project.ipynb
+++ b/Information_Retrieval_Project.ipynb
@@ -1617,37 +1617,22 @@
     {
       "cell_type": "code",
       "source": [
-        "loss, valence_loss, arousal_loss, dominance_loss, valence_mae, arousal_mae, dominance_mae = model.evaluate(X_test, {'valence': Y_test['Valence'], 'arousal': Y_test['Arousal'], 'dominance': Y_test['Dominance']})\n",
-        "\n",
-        "print(\"Test Loss:\", loss)\n",
-        "print(\"Valence Loss:\", valence_loss)\n",
-        "print(\"Arousal Loss:\", arousal_loss)\n",
-        "print(\"Dominance Loss:\", dominance_loss)\n",
-        "print(\"Valence MAE:\", valence_mae)\n",
-        "print(\"Arousal MAE:\", arousal_mae)\n",
-        "print(\"Dominance MAE:\", dominance_mae)"
+        "loss, valence_loss, arousal_loss, dominance_loss, valence_mae, arousal_mae, dominance_mae = model.evaluate(X_test, {'valence': Y_test['Valence'], 'arousal': Y_test['Arousal'], 'dominance': Y_test['Dominance']})"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "k--ywXRUGqn3",
-        "outputId": "215d623a-aba6-48c7-c415-b1164545c1e1"
+        "outputId": "84ef9c63-e0fc-4da3-eeb9-f4b8f7b5d901"
       },
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - arousal_loss: 0.0039 - arousal_mae: 0.0850 - dominance_loss: 0.0034 - dominance_mae: 0.0977 - loss: 0.0108 - valence_loss: 0.0033 - valence_mae: 0.0634\n",
-            "Test Loss: 0.011684468016028404\n",
-            "Valence Loss: 0.003702258225530386\n",
-            "Arousal Loss: 0.0042156632989645\n",
-            "Dominance Loss: 0.0038084478583186865\n",
-            "Valence MAE: 0.08321604877710342\n",
-            "Arousal MAE: 0.09599551558494568\n",
-            "Dominance MAE: 0.0658632218837738\n"
+            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 44ms/step - arousal_loss: 0.0039 - arousal_mae: 0.0850 - dominance_loss: 0.0034 - dominance_mae: 0.0977 - loss: 0.0108 - valence_loss: 0.0033 - valence_mae: 0.0634\n"
           ]
         }
       ]
@@ -6133,7 +6118,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNyhK0611imGGXORgRzEY8",
+      "authorship_tag": "ABX9TyPP/2lLjkVVF4lYnVkbT3nc",
       "include_colab_link": true
     },
     "kernelspec": {
